Fixed scroll visibility issues

--- a/UI/src/mods/ByLawEditorView/ByLawEditorView.module.scss
+++ b/UI/src/mods/ByLawEditorView/ByLawEditorView.module.scss
@@ -1,5 +1,8 @@
 @use '../base.scss' as _base;
 
+.view {
+    flex: 1;
+}
 .view > div {
     display: flex;
     flex-direction: column;
