--- a/UI/src/mods/SidePanelHeader/SidePanelHeader.module.scss
+++ b/UI/src/mods/SidePanelHeader/SidePanelHeader.module.scss
@@ -2,6 +2,8 @@
     width: 100%;
     background-color: var(--panelColorDark);
     padding: 6rem;
+    flex: 1;
+    flex-grow: 0;    
 
     display: flex;
     flex-direction: column;
